--- a/Basic_CSS_4.html
+++ b/Basic_CSS_4.html
@@ -228,3 +228,107 @@ The value given will apply to the entire element, whether that's an image with s
 
 Set the opacity of the anchor tags to 0.7 using links class to select them. -->
 
+.links {
+    text-align: left;
+    color: black;
+    opacity: 0.7;
+
+  }
+
+
+<!-- 13 Use the text-transform Property to Make Text Uppercase
+The text-transform property in CSS is used to change the appearance of text. 
+It's a convenient way to make sure text on a webpage appears consistently, without having to change the text content of the actual HTML elements.
+
+The following table shows how the different text-transformvalues change the example text "Transform me".
+
+Value	Result
+lowercase	"transform me"
+uppercase	"TRANSFORM ME"
+capitalize	"Transform Me"
+initial	Use the default value
+inherit	Use the text-transform value from the parent element
+none	Default: Use the original text
+
+Transform the text of the h4 to be uppercase using the text-transform property. -->
+
+h4 {
+    text-align: center;
+    background-color: rgba(45, 45, 45, 0.1);
+    padding: 10px;
+    font-size: 27px;
+    text-transform: uppercase;
+
+  }
+
+
+<!-- 14 Set the font-size for Multiple Heading Elements
+The font-size property is used to specify how large the text is in a given element. 
+This rule can be used for multiple elements to create visual consistency of text on a page. 
+In this challenge, you'll set the values for all h1 through h6 tags to balance the heading sizes. -->
+
+<style>
+  h1 {
+    font-size: 68px;
+  }
+  h2 {
+    font-size: 52px;
+  }
+  h3 {
+    font-size: 40px;
+  }
+  h4 {
+    font-size: 32px;
+  }
+  h5 {
+    font-size: 21px;
+  }
+  h6 {
+    font-size: 14px;
+  }
+</style>
+<h1>This is h1 text</h1>
+<h2>This is h2 text</h2>
+<h3>This is h3 text</h3>
+<h4>This is h4 text</h4>
+<h5>This is h5 text</h5>
+<h6>This is h6 text</h6>
+
+
+<!-- 15 Set the font-weight for Multiple Heading Elements
+You set the font-size of each heading tag in the last challenge, here you'll adjust the font-weight.
+
+The font-weight property sets how thick or thin characters are in a section of text. -->
+
+<style>
+  h1 {
+    font-size: 68px;
+    font-weight: 800;
+  }
+  h2 {
+    font-size: 52px;
+    font-weight: 600;
+  }
+  h3 {
+    font-size: 40px;
+    font-weight: 500;
+  }
+  h4 {
+    font-size: 32px;
+    font-weight: 400;
+  }
+  h5 {
+    font-size: 21px;
+    font-weight: 300;
+  }
+  h6 {
+    font-size: 14px;
+    font-weight: 200;
+  }
+</style>
+<h1>This is h1 text</h1>
+<h2>This is h2 text</h2>
+<h3>This is h3 text</h3>
+<h4>This is h4 text</h4>
+<h5>This is h5 text</h5>
+<h6>This is h6 text</h6>
