--- a/Basic_CSS_5.html
+++ b/Basic_CSS_5.html
@@ -181,3 +181,55 @@ Give the #left item a float of left and the #right item a float of right. -->
   </aside>
 </body>
 
+
+<!-- 6 Change the Position of Overlapping Elements with the z-index Property
+When elements are positioned to overlap (i.e. using position: absolute | relative | fixed | sticky), 
+the element coming later in the HTML markup will, by default, appear on the top of the other elements. 
+However, the z-index property can specify the order of how elements are stacked on top of one another. 
+It must be an integer (i.e. a whole number and not a decimal), 
+and higher values for the z-index property of an element move it higher in the stack than those with lower values.
+
+Add a z-index property to the element with the class name of first (the red rectangle) 
+and set it to a value of 2 so it covers the other element (blue rectangle). -->
+
+<style>
+  div {
+    width: 60%;
+    height: 200px;
+    margin-top: 20px;
+  }
+
+  .first {
+    background-color: red;
+    position: absolute;
+    z-index: 2;
+  }
+  .second {
+    background-color: blue;
+    position: absolute;
+    left: 40px;
+    top: 50px;
+    z-index: 1;
+  }
+</style>
+
+<div class="first"></div>
+<div class="second"></div>
+
+
+<!-- 7 Center an Element Horizontally Using the margin Property
+Another positioning technique is to center a block element horizontally. One way to do this is to set its margin to a value of auto.
+
+This method works for images, too. Images are inline elements by default, but can be changed to block elements when you set the display property to block.
+
+Center the div on the page by adding a margin property with a value of auto. -->
+
+<style>
+  div {
+    background-color: blue;
+    height: 100px;
+    width: 100px;
+    margin: auto;
+  }
+</style>
+<div></div>
