--- a/Basic_CSS_6.html
+++ b/Basic_CSS_6.html
@@ -47,4 +47,36 @@ Notice how the colors look different next to each other than they do compared ag
 <div class="yellow"></div>
 
 
+<!-- 2 Change the background-color property of the orange, cyan, and raspberry classes to their respective colors. 
+Make sure to use the hex codes and not the color names. -->
 
+<style>
+  body {
+    background-color: #FFFFFF;
+  }
+
+  .orange {
+    background-color: #FF7F00;
+  }
+
+  .cyan {
+    background-color: #00FFFF;
+  }
+
+  .raspberry {
+    background-color: #FF007F;
+  }
+
+  div {
+    height: 100px;
+    width: 100px;
+    margin-bottom: 5px;
+  }
+</style>
+
+<div class="orange"></div>
+<div class="cyan"></div>
+<div class="raspberry"></div>
+
+
+3
