--- a/Basic_CSS_6.html
+++ b/Basic_CSS_6.html
@@ -79,4 +79,157 @@ Make sure to use the hex codes and not the color names. -->
 <div class="raspberry"></div>
 
 
-3
+<!-- 3 Adjust the Color of Various Elements to Complementary Colors
+The Complementary Colors challenge showed that opposite colors on the color wheel can make each other appear more vibrant when placed side-by-side. 
+However, the strong visual contrast can be jarring if it's overused on a website, 
+and can sometimes make text harder to read if it's placed on a complementary-colored background. 
+In practice, one of the colors is usually dominant and the complement is used to bring visual attention to certain content on the page.
+
+This page will use a shade of teal (#09A7A1) as the dominant color, and its orange (#FF790E) 
+complement to visually highlight the sign-up buttons. 
+Change the background-color of both the header and footer from black to the teal color. 
+Then change the h2 text color to teal as well. Finally, change the background-color of the button to the orange color. -->
+
+<style>
+  body {
+    background-color: white;
+  }
+  header {
+    background-color: #09A7A1;
+    color: white;
+    padding: 0.25em;
+  }
+  h2 {
+    color: #09A7A1;
+  }
+  button {
+    background-color: #FF790E;
+  }
+  footer {
+    background-color: #09A7A1;
+    color: white;
+    padding: 0.5em;
+  }
+</style>
+<header>
+  <h1>Cooking with FCC!</h1>
+</header>
+<main>
+  <article>
+    <h2>Machine Learning in the Kitchen</h2>
+    <p>Join this two day workshop that walks through how to implement cutting-edge snack-getting algorithms with a command line interface. Coding usually involves writing exact instructions, but sometimes you need your computer to execute flexible commands, like <code>fetch Pringles</code>.</p>
+    <button>Sign Up</button>
+  </article>
+  <article>
+    <h2>Bisection Vegetable Chopping</h2>
+    <p>This week-long retreat will level-up your coding ninja skills to actual ninja skills. No longer is the humble bisection search limited to sorted arrays or coding interview questions, applying its concepts in the kitchen will have you chopping carrots in O(log n) time before you know it.</p>
+    <button>Sign Up</button>
+  </article>
+</main>
+<br>
+<footer>&copy; 2018 FCC Kitchen</footer>
+
+
+<!-- 4 Adjust the Hue of a Color
+Colors have several characteristics including hue, saturation, and lightness. 
+CSS3 introduced the hsl() function as an alternative way to pick a color by directly stating these characteristics.
+
+Hue is what people generally think of as 'color'. 
+If you picture a spectrum of colors starting with red on the left, moving through green in the middle, and blue on right, 
+the hue is where a color fits along this line. 
+In hsl(), hue uses a color wheel concept instead of the spectrum, where the angle of the color on the circle is given as a value between 0 and 360.
+
+Saturation is the amount of gray in a color. 
+A fully saturated color has no gray in it, and a minimally saturated color is almost completely gray. 
+This is given as a percentage with 100% being fully saturated.
+
+Lightness is the amount of white or black in a color. 
+A percentage is given ranging from 0% (black) to 100% (white), where 50% is the normal color.
+
+Change the background-color of each div element based on the class names (green, cyan, or blue) using hsl(). 
+All three should have full saturation and normal lightness. -->
+
+<style>
+  body {
+    background-color: #FFFFFF;
+  }
+
+  .green {
+    background-color: hsl(120, 100%, 50%);
+  }
+
+  .cyan {
+    background-color: hsl(180, 100%, 50%);
+  }
+
+  .blue {
+    background-color: hsl(240, 100%, 50%);
+  }
+
+  div {
+    display: inline-block;
+    height: 100px;
+    width: 100px;
+  }
+</style>
+
+<div class="green"></div>
+<div class="cyan"></div>
+<div class="blue"></div>
+
+<!-- 5 Adjust the Tone of a Color
+The hsl() option in CSS also makes it easy to adjust the tone of a color. 
+Mixing white with a pure hue creates a tint of that color, and adding black will make a shade. 
+Alternatively, a tone is produced by adding gray or by both tinting and shading. 
+Recall that the 's' and 'l' of hsl() stand for saturation and lightness, respectively. 
+The saturation percent changes the amount of gray and the lightness percent determines how much white or black is in the color. 
+This is useful when you have a base hue you like, but need different variations of it.
+
+All elements have a default background-color of transparent. 
+Our nav element currently appears to have a cyan background, because the element behind it has a background-color set to cyan. 
+Add a background-color to the nav element so it uses the same cyan hue, but has 80% saturation and 25% lightness values to change its tone and shade. -->
+
+<style>
+  header {
+    background-color: hsl(180, 90%, 35%);
+    color: #FFFFFF;
+  }
+
+  nav {
+    background-color: hsl(180, 80%, 25%);
+  }
+
+  h1 {
+    text-indent: 10px;
+    padding-top: 10px;
+  }
+
+  nav ul {
+    margin: 0px;
+    padding: 5px 0px 5px 30px;
+  }
+
+  nav li {
+    display: inline;
+    margin-right: 20px;
+  }
+
+  a {
+    text-decoration: none;
+    color: inherit;
+  }
+</style>
+
+<header>
+  <h1>Cooking with FCC!</h1>
+  <nav>
+    <ul>
+      <li><a href="#">Home</a></li>
+      <li><a href="#">Classes</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </nav>
+</header>
+
+
+6
