--- a/Responsive Web Design(NEW)/1 Cafe Menu/1 cafe_menu.html
+++ b/Responsive Web Design(NEW)/1 Cafe Menu/1 cafe_menu.html
@@ -39,3 +39,38 @@ Give it the name of the cafe in capitalized letters to make it stand out. -->
   <body>
     <h1>CAMPER CAFE</h1>
   </body>
+
+
+<!-- Step 6
+To let visitors know the cafe was founded in 2020, add a p element below the h1 element with the text Est. 2020. -->
+
+    <h1>CAMPER CAFE</h1>
+    <p>Est. 2020</p>
+
+
+<!-- Step 7
+Since the p element added in the previous step provides supplemental information about the cafe, nest both the h1 and p elements in a header element. -->
+
+    <header>
+      <h1>CAMPER CAFE</h1>
+      <p>Est. 2020</p>
+    </header>
+
+
+<!-- Step 8
+It's time to add some menu content. Add a main element below the existing header element. 
+It will eventually contain pricing information about coffee and desserts offered by the cafe. -->
+
+    <main>
+    </main>
+
+
+<!-- Step 9
+There will be two sections on the menu, one for coffees and one for desserts. 
+Add a section element within the main element so you have a place to put all the coffees available. -->
+
+    <main>
+      <section>
+      </section>
+    </main>
+
