--- a/Responsive Web Design(NEW)/1 Cafe Menu/1 cafe_menu.html
+++ b/Responsive Web Design(NEW)/1 Cafe Menu/1 cafe_menu.html
@@ -74,3 +74,91 @@ Add a section element within the main element so you have a place to put all the
       </section>
     </main>
 
+
+<!-- Step 10
+Create an h2 element in the section element and give it the text Coffee. -->
+
+      <section>
+        <h2>Coffee</h2>
+      </section>
+
+
+<!-- Step 11
+Up until now, you have been limited regarding the presentation and appearance of the content you create. 
+To start taking control, add a style element within the head element. -->
+
+  <head>
+    <style></style>
+    <meta charset="utf-8" />
+    <title>Cafe Menu</title>
+  </head>
+
+
+<!-- Step 12
+You can add style to an element by specifying it in the style element and setting a property for it like this:
+
+element {
+ property: value;
+}
+Center your h1 element by setting its text-align property to the value center. -->
+
+    <style>
+      h1 {
+        text-align: center;
+      }
+    </style>
+
+
+<!-- Step 13
+In the previous step, you used a type selector to style the h1 element. Go ahead and center the h2 and p elements with a new type selector for each one. -->
+
+    <style>
+      h1 {
+        text-align: center;
+      }
+      h2 {
+        text-align: center;
+      }
+      p {
+        text-align: center;
+      }
+    </style>
+
+
+<!-- Step 14
+You now have three type selectors with the exact same styling. 
+You can add the same group of styles to many elements by separating the selectors with commas like this:
+
+selector1, selector2 {
+  property: value;
+}
+Use a single type selector to center the h1, h2 and p elements at the same time. -->
+
+    <style>
+      h1, h2, p {
+        text-align: center;
+      }
+    </style>
+
+
+<!-- Step 15
+You have styled three elements by writing CSS inside the style tags. 
+This works, but since there will be many more styles, it's best to put all the styles in a separate file and link to it.
+We have created a separate styles.css file for you and switched the editor view to that file. You can change between files with the tabs at the top of the editor.
+
+Start by rewriting the styles you have created into the styles.css file. Make sure to exclude the opening and closing style tags. -->
+
+h1, h2, p {
+    text-align: center;
+    }
+
+
+<!-- Step 16
+Now that you have the CSS in the styles.css file, go ahead and remove the style element and all its content. 
+Once it is removed, the text that was centered will shift back to the left. -->
+
+  <head>
+    <meta charset="utf-8" />
+    <title>Cafe Menu</title>    
+  </head>
+
