--- a/Responsive Web Design(NEW)/1 Cafe Menu/1 cafe_menu.html
+++ b/Responsive Web Design(NEW)/1 Cafe Menu/1 cafe_menu.html
@@ -266,3 +266,48 @@ div {
   background-color: burlywood;
 }
 
+
+<!-- Step 26
+Next, you want to center the div horizontally. 
+You can do this by setting its margin-left and margin-right properties to auto. 
+Think of the margin as invisible space around an element. Using these two margin properties, center the div element within the body element. -->
+
+div {
+  width: 80%;
+  background-color: burlywood;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+<!-- Step 27
+So far you have been using type selectors to style elements. A class selector is defined by a name with a dot directly in front it, like this:
+
+.class-name {
+  styles
+}
+Change the existing div selector into a class selector by replacing div with a class named menu. -->
+
+.menu {
+  width: 80%;
+  background-color: burlywood;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
+<!-- Step 28
+To apply the class's styling to the div element, add a class attribute to the div element's opening tag and set its value to menu. -->
+
+    <div class="menu">
+      
+
+<!-- Step 29
+Since the cafe's main product for sale is coffee, you could use an image of coffee beans for the background of the page.
+
+Delete the comment and its contents inside the body type selector. 
+Now add a background-image property and set its value to url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg). -->
+
+body {
+  background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg)
+  }
