--- a/Responsive Web Design(NEW)/1 Cafe Menu/2 cafe_menu.html
+++ b/Responsive Web Design(NEW)/1 Cafe Menu/2 cafe_menu.html
@@ -64,3 +64,52 @@ Next, you want to align the price to the right. Add a class named price to your 
             <p class="price">3.00</p>
 
 
+<!-- Step 36
+Now align the text to the right for the elements with the price class. -->
+
+.price {
+  text-align: right;
+}
+
+
+<!-- Step 37
+That is kind of what you want, but now it would be nice if the flavor and price were on the same line. 
+p elements are block-level elements, so they take up the entire width of their parent element.
+
+To get them on the same line, you need to apply some styling to the p elements, so they behave more like inline elements. 
+Add a class attribute with the value item to the first article element under the Coffee heading. -->
+
+          <h2>Coffee</h2>
+          <article class="item">
+            <p class="flavor">French Vanilla</p>
+            <p class="price">3.00</p>
+          </article>
+
+
+<!-- Step 38
+The p elements are nested in an article element with the class attribute of item. 
+You can style all the p elements nested anywhere in elements with a class named item like this:
+
+.item p { }
+Using the above selector, add a display property with value inline-block so the p elements behave more like inline elements. -->
+
+.item p {
+  display: inline-block;
+}
+
+
+<!-- Step 39
+That's closer, but the price didn't stay over on the right. 
+This is because inline-block elements only take up the width of their content. 
+To spread them out, add a width property to the flavor and price class selectors that have a value of 50% each. -->
+
+.flavor {
+  text-align: left;
+  width: 50%;
+}
+.price {
+  text-align: right;
+  width: 50%;
+}
+
+
