--- a/Responsive Web Design(NEW)/1 Cafe Menu/2 cafe_menu.html
+++ b/Responsive Web Design(NEW)/1 Cafe Menu/2 cafe_menu.html
@@ -113,3 +113,69 @@ To spread them out, add a width property to the flavor and price class selectors
 }
 
 
+<!-- Step 40
+Well that did not work. Styling the p elements as inline-block and placing them on separate lines in the code 
+creates an extra space to the right of the first p element, causing the second one to shift to the next line. 
+One way to fix this is to make each p element's width a little less than 50%.
+
+Change the width value to 49% for each class to see what happens. -->
+
+.flavor {
+  text-align: left;
+  width: 49%;
+}
+.price {
+  text-align: right;
+  width: 49%;
+}
+
+
+<!-- Step 41
+That worked, but there is still a little space on the right of the price.
+
+You could keep trying various percentages for the widths. 
+Instead, simply move the price p element to be on the same line and make sure there is no space between them. -->
+
+            <p class="flavor">French Vanilla</p><p class="price">3.00</p>
+
+
+<!-- Step 42
+Now go ahead and change both the flavor and price class' widths to be 50% again. -->
+
+.flavor {
+  text-align: left;
+  width: 50%;
+}
+.price {
+  text-align: right;
+  width: 50%;
+}
+
+
+<!-- Step 43
+Now that you know it works, you can change the remaining article and p elements to match the first set. 
+Start by adding the class item to the other article elements. -->
+
+          <article class="item">
+            <p>Caramel Macchiato</p>
+            <p>3.75</p>
+          </article>
+...................
+
+
+<!-- Step 44
+Next, position the other p elements to be on the same line with no space between them. -->
+
+          <article class="item">
+            <p>Caramel Macchiato</p><p>3.75</p>
+          </article>
+..................
+
+
+<!-- Step 45
+To complete the styling, add the applicable class names flavor and price to all the remaining p elements. -->
+
+          <article class="item">
+            <p class="flavor">Caramel Macchiato</p><p class="price">3.75</p>
+          </article>
+..................
