--- a/Responsive Web Design(NEW)/1 Cafe Menu/2 cafe_menu.html
+++ b/Responsive Web Design(NEW)/1 Cafe Menu/2 cafe_menu.html
@@ -301,3 +301,76 @@ That looks better. Now try to add the same 20px padding to the top and bottom of
 }
 
 
+<!-- Step 56
+Since all 4 sides of the menu have the same internal spacing, go ahead and delete the four properties and use a single padding property with the value 20px. -->
+
+.menu {
+  width: 80%;
+  background-color: burlywood;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
+}
+
+
+<!-- Step 57
+The current width of the menu will always take up 80% of the body element's width. On a very wide screen, the coffee and dessert appear far apart from their prices.
+
+Add a max-width property to the menu class with a value of 500px to prevent it from growing too wide. -->
+
+.menu {
+  width: 80%;
+  background-color: burlywood;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 20px;
+  max-width: 500px;
+}
+
+<!-- Step 58
+You can change the font-family of text, to make it look different from the default font of your browser. Each browser has some common fonts available to it.
+
+Change all the text in your body, by adding a font-family property with the value sans-serif. This is a fairly common font that is very readable. -->
+
+body {
+  background-image: url(https://cdn.freecodecamp.org/curriculum/css-cafe/beans.jpg);
+  font-family: sans-serif;
+}
+
+
+<!-- Step 59
+It is a bit boring for all the text to have the same font-family. 
+You can still have the majority of the text sans-serif and make just the h1 and h2 elements different using a different selector.
+
+Style both the h1 and the h2 elements so that only these elements' text use Impact font. -->
+
+h1, h2 {
+  font-family: Impact;
+}
+
+
+<!-- Step 60
+You can add a fallback value for the font-family by adding another font name separated by a comma. 
+Fallbacks are used in instances where the initial is not found/available.
+
+Add the fallback font serif after the Impact font. -->
+
+h1, h2 {
+  font-family: Impact, serif;
+}
+
+
+<!-- Step 61
+Make the Est. 2020 text italicized by creating an established class selector and giving it the font-style property with the value italic. -->
+
+.established {
+  font-style: italic;
+}
+
+
+<!-- Step 62 
+Now apply the established class to the Est. 2020 text. -->
+
+<p class="established">Est. 2020</p>
+
+
