--- a/Responsive Web Design(NEW)/1 Cafe Menu/3 cafe_menu.html
+++ b/Responsive Web Design(NEW)/1 Cafe Menu/3 cafe_menu.html
@@ -136,3 +136,46 @@ Using the same style selector in the previous step, make the font size of the it
 }
 
 
+<!-- Step 76
+Changing the margin-bottom to 5px looks great. 
+However, now the space between the Cinnamon Roll menu item and the second hr element does not match the space between the top hr element and the Coffee heading.
+
+Add some more space by creating a class named bottom-line using 25px for the margin-top property. -->
+
+.bottom-line {
+  margin-top: 25px;
+}
+
+
+<!-- Step 77
+Now add the bottom-line class to the second hr element so the styling is applied. -->
+
+      <hr class="bottom-line">
+
+
+<!-- Step 78
+Next you are going to be styling the footer element. To keep the CSS organized, add a comment at the end of styles.css with the text FOOTER. -->
+
+/* FOOTER */
+
+
+<!-- Step 79
+Moving down to the footer element, make all the text have a value of 14px for the font size. -->
+
+footer {
+  font-size: 14px;
+}
+
+
+<!-- Step 80
+The default color of a link that has not yet been clicked on is typically blue. 
+The default color of a link that has already been visited from a page is typically purple.
+
+To make the footer links the same color regardless if a link has been visited, 
+use a type selector for the anchor element (a) and use the value black for the color property. -->
+
+a {
+  color: black;
+}
+
+
