--- a/Responsive Web Design(NEW)/1 Cafe Menu/3 cafe_menu.html
+++ b/Responsive Web Design(NEW)/1 Cafe Menu/3 cafe_menu.html
@@ -179,3 +179,62 @@ a {
 }
 
 
+<!-- Step 81
+You change properties of a link when the link has actually been visited by using a pseudo-selector that looks like a:visited { propertyName: propertyValue; }.
+
+Change the color of the footer Visit our website link to be grey when a user has visited the link. -->
+
+a:visited {
+  color: grey;
+}
+
+
+<!-- Step 82
+You change properties of a link when the mouse hovers over them by using a pseudo-selector that looks like a:hover { propertyName: propertyValue; }.
+
+Change the color of the footer Visit our website link to be brown when a user hovers over it. -->
+
+a:hover {
+  color: brown;
+}
+
+
+<!-- Step 83
+You change properties of a link when the link is actually being clicked by using a pseudo-selector that looks like a:active { propertyName: propertyValue; }.
+
+Change the color of the footer Visit our website link to be white when clicked on. -->
+
+a:active {
+  color: white;
+}
+
+
+<!-- Step 84
+To keep with the same color theme you have already been using (black and brown), 
+change the color for when the link is visited to black and use brown for when the link is actually clicked. -->
+
+a:visited {
+  color: black;
+}
+
+a:hover {
+  color: brown;
+}
+
+a:active {
+  color: brown;
+}
+
+
+<!-- Step 85
+The menu text CAMPER CAFE has a different space from the top than the address at the bottom of the menu. 
+This is due to the browser having some default top margin for the h1 element.
+
+Change the top margin of the h1 element to 0 to remove all the top margin. -->
+
+h1 {
+  font-size: 40px;
+  margin-top: 0px;
+}
+
+
