--- a/Responsive Web Design(NEW)/1 Cafe Menu/3 cafe_menu.html
+++ b/Responsive Web Design(NEW)/1 Cafe Menu/3 cafe_menu.html
@@ -238,3 +238,57 @@ h1 {
 }
 
 
+<!-- Step 86
+To remove some of the vertical space between the h1 element and the text Est. 2020, change the bottom margin of the h1 to 15px. -->
+
+h1 {
+  font-size: 40px;
+  margin-top: 0;
+  margin-bottom: 15px;
+}
+
+
+<!-- Step 87
+Now the top spacing looks good. 
+The space below the address at the bottom of the menu is a little bigger than the space at the top of the menu and the h1 element.
+
+To decrease the default margin space below the address p element, create a class selector named address and use the value 5px for the margin-bottom property. -->
+
+.address {
+  margin-bottom: 5px;
+}
+
+
+<!-- Step 88
+Now apply the address class to the p element containing the address. -->
+
+      <footer>
+        <p>
+          <a href="https://www.freecodecamp.org" target="_blank">Visit our website</a>
+        </p>
+        <p class="address">123 Free Code Camp Drive</p>
+      </footer>
+
+
+<!-- Step 89
+The menu looks good, but other than the coffee beans background image, it is mainly just text.
+
+Under the Coffee heading, add an image using the url https://cdn.freecodecamp.org/curriculum/css-cafe/coffee.jpg. Give the image an alt value of coffee icon. -->
+
+          <h2>Coffee</h2>
+          <img src="https://cdn.freecodecamp.org/curriculum/css-cafe/coffee.jpg" alt="coffee icon">
+
+
+<!-- Step 90
+The image you added is not centered horizontally like the Coffee heading above it. img elements are "like" inline elements.
+
+To make the image behave like heading elements (which are block-level), 
+create an img type selector and use the value block for the display property and use the applicable margin-left and margin-right values to center it horizontally. -->
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+
