--- a/Responsive Web Design(NEW)/1 Cafe Menu/3 cafe_menu.html
+++ b/Responsive Web Design(NEW)/1 Cafe Menu/3 cafe_menu.html
@@ -292,3 +292,25 @@ img {
 }
 
 
+<!-- Step 91
+Add one last image under the Desserts heading using the url https://cdn.freecodecamp.org/curriculum/css-cafe/pie.jpg. Give the image an alt value of pie icon. -->
+
+          <h2>Desserts</h2>
+          <img src="https://cdn.freecodecamp.org/curriculum/css-cafe/pie.jpg" alt="pie icon">
+
+
+<!-- Step 92
+It would be nice if the vertical space between the h2 elements and their associated icons was smaller. 
+The h2 elements have default top and bottom margin space, so you could change the bottom margin of the h2 elements to say 0 or another number.
+
+There is an easier way, simply add a negative top margin to the img elements to pull them up from their current positions. 
+Negative values are created using a - in front of the value. To complete this project, go ahead and use a negative top margin of 25px in the img type selector. -->
+
+img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: -25px;
+}
+
+
