--- a/Responsive Web Design(NEW)/2 CSS Color Markers/1 CSS Color Markers.html
+++ b/Responsive Web Design(NEW)/2 CSS Color Markers/1 CSS Color Markers.html
@@ -8,3 +8,21 @@ Add a DOCTYPE html declaration at the top of the document, and an html element a
 </html>
 
 
+<!-- Step 2
+Nest a head element within the html element. Just after the head element, add a body element. -->
+
+<head>
+</head>
+<body>
+</body>
+
+
+<!-- Step 3
+Remember that the title element gives search engines extra information about the page. 
+It also tells browsers what text to display in the title bar when the page is open, and on the tab for the page.
+
+Within the head element, nest a title element with the text Colored Markers. -->
+
+  <head>
+    <title>Colored Markers</title>
+  </head>
