--- a/Responsive Web Design(NEW)/2 CSS Color Markers/1 CSS Color Markers.html
+++ b/Responsive Web Design(NEW)/2 CSS Color Markers/1 CSS Color Markers.html
@@ -114,4 +114,77 @@ Next, within the div, add another div element and give it a class of marker. -->
   </body>
 
 
+<!-- Step 11
+It's time to add some color to the page. Remember that one way to add color to an element is to use a color keyword like black, cyan, or yellow.
+
+As a reminder, here's how to target the class freecodecamp:
+
+.freecodecamp {
+  
+}
+Create a new CSS rule that targets the class marker, and set its background-color property to red. -->
+
+.marker {
+  background-color: red;
+}
+
+
+<!-- Step 12
+Notice that your marker doesn't seem to have any color. 
+The background color was actually applied, but since the marker div element is empty, it doesn't have any width or height by default.
+
+In your .marker CSS rule, set the width property to 200px and the height property to 25px. -->
+
+.marker {
+  background-color: red;
+  width: 200px;
+  height: 25px;
+}
+
+
+<!-- Step 13
+Your marker would look better if it was centered on the page. An easy way to do that is with the margin shorthand property.
+
+In the last project, you set the margin area of elements separately with properties like margin-top and margin-left. 
+The margin shorthand property makes it easy to set multiple margin areas at the same time.
+
+To center your marker on the page, set its margin property to auto. This sets margin-top, margin-right, margin-bottom, and margin-left all to auto. -->
+
+.marker {
+  width: 200px;
+  height: 25px;
+  background-color: red;
+  margin: auto;
+}
+
+
+<!-- Step 14
+Now that you've got one marker centered with color, it's time to add the other markers.
+
+In the container div, add two more div elements and give them each a class of marker. -->
+
+    <div class="container">
+      <div class="marker">
+      </div>
+      <div class="marker">
+      </div>
+      <div class="marker">
+      </div>
+    </div>
+
+
+<!-- Step 15
+While you have three separate marker div elements, they look like one big rectangle. You should add some space between them to make it easier to see each element.
+
+When the shorthand margin property has two values, it sets margin-top and margin-bottom to the first value, and margin-left and margin-right to the second value.
+
+In your .marker CSS rule, set the margin property to 10px auto. -->
+
+.marker {
+  width: 200px;
+  height: 25px;
+  background-color: red;
+  margin: 10px auto;
+}
+
 
