--- a/Responsive Web Design(NEW)/2 CSS Color Markers/1 CSS Color Markers.html
+++ b/Responsive Web Design(NEW)/2 CSS Color Markers/1 CSS Color Markers.html
@@ -188,3 +188,34 @@ In your .marker CSS rule, set the margin property to 10px auto. -->
 }
 
 
+<!-- Step 16
+In school, you might have learned that red, yellow, and blue are primary colors, and learned how to create new colors by mixing those. 
+However, this is an outdated model.
+
+These days, there are two main color models: the additive RGB (red, green, blue) model used in electronic devices, 
+and the subtractive CMYK (cyan, magenta, yellow, black) model used in print. In this project you'll work with the RGB model.
+
+First, add the class one to the first marker div element. -->
+
+      <div class="one marker">
+      </div>
+
+
+<!-- Step 17
+Next, remove the background-color property and its value from the .marker CSS rule. -->
+
+.marker {
+  width: 200px;
+  height: 25px;
+  margin: 10px auto;
+}
+
+
+<!-- Step 18
+Then, create a new CSS rule that targets the class one and set its background-color property to red. -->
+
+.one {
+  background-color: red;
+}
+
+
