--- a/Responsive Web Design(NEW)/2 CSS Color Markers/1 CSS Color Markers.html
+++ b/Responsive Web Design(NEW)/2 CSS Color Markers/1 CSS Color Markers.html
@@ -219,3 +219,27 @@ Then, create a new CSS rule that targets the class one and set its background-co
 }
 
 
+<!-- Step 19
+Add the class two to the second marker div, and the class three to the third marker div. -->
+
+      <div class="marker one">
+      </div>
+      <div class="marker two">
+      </div>
+      <div class="marker three">
+      </div>
+
+
+<!-- Step 20
+Create a CSS rule that targets the class two and set its background-color property to green.
+
+Also, create a separate CSS rule that targets the class three and set its background-color to blue. -->
+
+.two {
+  background-color: green;
+}
+.three {
+  background-color: blue;
+}
+
+
